# ledn-backend-challenge

./: .gitignore  Dockerfile  README.md  backend.env  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
mongodb/: Dockerfile  import-data.sh
python-api/: Dockerfile  main.py  models.py  pyproject.toml  security.py  services.py
python-api/test/: test_api.py  test_large_data.py
seed-data/: accounts-api.json
