[tool.poetry]
name = "ledn-backend-challenge-python"
version = "0.1.0"
description = ""
authors = ["Daniel Arndt <dan@arndt.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
motor = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
